--- a/ShinyAndPrismSample/App.xaml
+++ b/ShinyAndPrismSample/App.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <prism:PrismApplication xmlns="http://xamarin.com/schemas/2014/forms"
-                        xmlns:prism="clr-namespace:Prism.DryIoc;assembly=Prism.DryIoc.Forms.Extended"
+                        xmlns:prism="clr-namespace:Prism;assembly=Prism.Forms.Extended"
                         xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                         x:Class="ShinyAndPrismSample.App">
     <Application.Resources>
